--- a/Algorithim Presentation/style/style.css
+++ b/Algorithim Presentation/style/style.css
@@ -42,7 +42,7 @@ canvas{
 
 #pseudocode pre{
 	color: #674800;
-	font-size: 125%;
+	font-size: 1.2em;
 	background-color: #FFF9EB;
 	border: solid;
 
