Fixed image loading problem and working on modules now

--- a/JQuery/style/style.css
+++ b/JQuery/style/style.css
@@ -1,3 +1,16 @@
 canvas{
-	background-color: #000000;
+	background: url("../images/track.png");
+	background-repeat: no-repeat;
+	width: 1016px;
+	height: 432px;
 }
+
+#betButton{
+	width: 100px;
+	height: 100px;
+}
+
+#information table, th, td{
+	border: 1px solid;
+}
+
