--- a/JQuery/style/style.css
+++ b/JQuery/style/style.css
@@ -13,6 +13,7 @@ th, tr, td{
 	border: 1px solid;
 	padding: 15px;
 	text-align: center;
+	font-family: "Lucida Console";
 }
 
 .major{
@@ -45,6 +46,14 @@ th, tr, td{
 
 button{
 	padding: 20px;
+	font-family: "Lucida Console";
+}
+
+h1{
+	padding-top: 20px;
+	font-size: 50px;
+	font-family: "Lucida Console";
+	text-shadow: 2px 2px #ADADAD;
 }
 
 
